# news_rake

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  scrapy.cfg
getnews/: pipelines.py  settings.py
getnews/getnews/: items.py  middlewares.py  settings.py
getnews/getnews/spiders/: coingecko.py  decrypt.py  jinse.py  solana_medium.py  solana_news.py
getnews/spiders/: __init__.py  coindesk.py  coingecko.py  decrypt.py  followin.py  foresight.py  jinse.py  solana_medium.py  solana_news.py  theblock.py  zombit.py
getnews/storage/: CMSClient.py  __init__.py  postgres.py  storage.py
getnews/utils/: __init__.py  clean_utils.py  time_utils.py  translate.py
mq_transalte/: asjdkash.py  main.py  test_tran.py
mq_translate/: main.py
mq_translate/utils/: send_notion.py
tests/: test_cms_client.py  test_crawlers_verify.py  test_pipelines.py  test_postgres.py  test_storage.py
